Homepage HTML Structure almost complete. Need to fix alignment on images and footer content

--- a/css/index.css
+++ b/css/index.css
@@ -162,12 +162,16 @@ header div {
 }
 .sectionsContainer .leftHalf {
   justify-self: left;
+  line-height: 24px;
+  font-size: 16px;
 }
 .sectionsContainer .rightHalf {
   justify-self: right;
+  line-height: 24px;
+  font-size: 16px;
 }
 .content1 {
-  max-width: 50%;
+  max-width: 75%;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -181,11 +185,14 @@ header div {
   font-weight: bold;
   font-size: 24px;
   margin: 15px 0;
+  position: relative;
+  left: 50px;
 }
 .titleIMGVilla {
   background-image: url(../img/home/home-villas-img.png);
-  width: 100%;
+  width: 90%;
   height: 230px;
+  margin: 25px auto;
 }
 .titleIMGVilla #theVillasHeader {
   display: flex;
@@ -194,11 +201,100 @@ header div {
   background-color: #ffffff;
   color: black;
   justify-content: center;
+  position: relative;
+  top: 185px;
+  left: 698px;
 }
 .titleIMGVilla #theVillasHeader h3 {
   display: flex;
   font-weight: bold;
-  top: 200px;
+  position: relative;
+  top: 25px;
+}
+.recentProjectsStructure {
+  display: flex;
+  flex-direction: column;
+  margin: 25px 0px;
+}
+.recentProjectsStructure p {
+  line-height: 24px;
+  font-size: 16px;
+  max-width: 35%;
+  margin: 0 auto;
+  margin-top: 25px;
+}
+.titleIMGOutskirts {
+  background-image: url(../img/home/home-outskirts-img.png);
+  width: 90%;
+  height: 230px;
+  margin: 25px auto;
+}
+.titleIMGOutskirts #theOutskirtsHeader {
+  display: flex;
+  width: 225px;
+  height: 45px;
+  background-color: #ffffff;
+  color: black;
+  justify-content: center;
+  position: relative;
+  top: 185px;
+}
+.titleIMGOutskirts #theOutskirtsHeader h3 {
+  display: flex;
+  font-weight: bold;
+  position: relative;
+  top: 25px;
+}
+.titleIMGBlock {
+  background-image: url(../img/home/home-the-blocks-img.png);
+  width: 90%;
+  height: 230px;
+  margin: 25px auto;
+}
+.titleIMGBlock #theBlockHeader {
+  display: flex;
+  width: 225px;
+  height: 45px;
+  background-color: #ffffff;
+  color: black;
+  justify-content: center;
+  position: relative;
+  top: 185px;
+  left: 698px;
+}
+.titleIMGBlock #theBlockHeader h3 {
+  display: flex;
+  font-weight: bold;
+  position: relative;
+  top: 25px;
+}
+.footerSection {
+  display: flex;
+  max-width: 100%;
+  height: 200px;
+  background-color: #828282;
+  line-height: 24px;
+  font-size: 16px;
+  justify-content: space-around;
+}
+.footerSection .footerSectionSplits {
+  margin: auto 10px;
+  max-width: 20%;
+}
+.footerSection h4 {
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+}
+.footerSection p {
+  font-size: 14px;
+  line-height: 26px;
+  color: #ffffff;
+}
+.footerSection #copyRights {
+  position: relative;
+  right: 350px;
+  margin: 0 auto;
 }
 .navigationBar {
   width: 100%;
