--- a/less/homepage.less
+++ b/less/homepage.less
@@ -3,9 +3,8 @@ body {
     margin: 0 auto;
     width: 100%;
     max-width: 1024px;
-  }
-
-  header {
+}
+header {
     display: inline-flex;
     background-image: url("../img/home/home-jumbotron.png");
     background-size: cover;
@@ -20,22 +19,27 @@ body {
         margin-left: 60px;
         margin-top: 325px;
       }
-  }
+}
 
-  .sectionsContainer{
+
+.sectionsContainer{
       display: inline-flex;
     .leftHalf {
         justify-self: left;
+        line-height: 24px;
+        font-size: 16px;
     }
     .rightHalf {
         justify-self: right;
+        line-height: 24px;
+        font-size: 16px;
     }
 
     margin: 50px 55px;
-  }
+}
 
-  .content1 {
-    max-width: 50%;
+.content1 {
+    max-width: 75%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -44,18 +48,21 @@ body {
           font-weight: bold;
           font-size: 24px;
       }
-  }
+}
 
-  #recentProjects {
+#recentProjects {
       font-weight: bold;
       font-size: 24px;
       margin: 15px 0;
-  }
+      position: relative;
+      left: 50px;
+}
 
-  .titleIMGVilla {
+.titleIMGVilla {
       background-image: url(../img/home/home-villas-img.png);
-      width: 100%;
+      width: 90%;
       height: 230px;
+      margin: 25px auto;
 
       #theVillasHeader{
           display: flex;
@@ -64,10 +71,109 @@ body {
           background-color: #ffffff;
           color:black;
           justify-content: center;
+          position: relative;
+          top: 185px;
+          left: 698px;
           h3{
             display: flex;
             font-weight: bold;
-            top: 200px;
-          }
+            position: relative;
+            top: 25px;
+            }
       }
-  }
+}
+
+.recentProjectsStructure{ 
+    display: flex;
+    flex-direction: column;
+    margin: 25px 0px;
+    p{
+        line-height: 24px;
+        font-size: 16px;
+        max-width: 35%;
+        margin: 0 auto;
+        margin-top: 25px;
+    }
+}
+
+.titleIMGOutskirts{
+    background-image: url(../img/home/home-outskirts-img.png);
+    width: 90%;
+    height: 230px;
+    margin: 25px auto;
+
+    #theOutskirtsHeader{
+        display: flex;
+        width: 225px;
+        height: 45px;
+        background-color: #ffffff;
+        color:black;
+        justify-content: center;
+        position: relative;
+        top: 185px;
+        h3{
+          display: flex;
+          font-weight: bold;
+          position: relative;
+          top: 25px;
+          }
+    }
+}
+
+.titleIMGBlock {
+    background-image: url(../img/home/home-the-blocks-img.png);
+    width: 90%;
+    height: 230px;
+    margin: 25px auto;
+
+    #theBlockHeader{
+        display: flex;
+        width: 225px;
+        height: 45px;
+        background-color: #ffffff;
+        color:black;
+        justify-content: center;
+        position: relative;
+        top: 185px;
+        left: 698px;
+        h3{
+          display: flex;
+          font-weight: bold;
+          position: relative;
+          top: 25px;
+          }
+    }
+}
+
+
+.footerSection {
+    display: flex;
+    max-width: 100%;
+    height: 200px;
+    background-color: #828282;
+    line-height: 24px;
+    font-size: 16px;
+    justify-content: space-around;
+  
+    .footerSectionSplits {
+        margin: auto 10px;
+        max-width: 20%;
+    }
+
+    h4 {
+        font-size: 20px;
+        line-height: 24px;
+        color: #ffffff;
+    }
+    p {
+        font-size: 14px;
+        line-height: 26px;
+        color: #ffffff;
+    }
+    #copyRights{
+        position: relative;
+        right: 350px;
+        margin: 0 auto;
+    }
+}
+
